--- a/control-hidrico/app.json
+++ b/control-hidrico/app.json
@@ -2,6 +2,10 @@
   "expo": {
     "name": "control-hidrico",
     "slug": "control-hidrico",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "scheme": "controlhidrico",
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
