--- a/control-hidrico/package.json
+++ b/control-hidrico/package.json
@@ -1,7 +1,7 @@
 {
   "name": "control-hidrico",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -17,7 +17,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-web": "^0.19.12"
+    "react-native-web": "^0.19.12",
+    "expo-router": "~3.5.23",
+    "react-native-screens": "3.31.1",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
