--- a/control-hidrico/package.json
+++ b/control-hidrico/package.json
@@ -11,21 +11,30 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "expo": "^51.0.34",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-web": "^0.19.12",
-    "expo-router": "~3.5.23",
     "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1"
+    "react-native-web": "^0.19.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "eslint": "^9.11.1",
     "eslint-config-expo": "^7.1.2"
   },
-  "private": true
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
